one new sliderimage + fix admin list edit save button

--- a/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
+++ b/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="form-group mt-4">
-          <p-checkbox binary="true" value="register" label="Register Laschen hinzufügen" [(ngModel)]="product.register" name="register"></p-checkbox>
+          <p-checkbox binary="true" value="register" label="Register Laschen anzeigen" [(ngModel)]="product.register" name="register"></p-checkbox>
         </div>
         <div *ngIf="product.register">
           <div class="form-row">
