--- a/src/app/core/header/header-search/header-search.component.scss
+++ b/src/app/core/header/header-search/header-search.component.scss
@@ -1,14 +1,14 @@
 input[type=text] {
   position: absolute;
-  top: 18px;
-  right: 100px;
+  top: 17px;
+  right: 122px;
   border: 0;
 
 
-  background-image: url('./../../../../assets/searchicon.png');
+  //background-image: url('./../../../../assets/searchicon.png');
   width: 40px;
   height: 30px;
-  // background-color: #343A40;
+  background-color: transparent;
   // background-size: 30px;
 
 
@@ -18,6 +18,11 @@ input[type=text] {
   cursor: pointer;
   text-indent:-5000px;
   // transition: all 0.4s ease-in-out;
+}
+
+.fa{
+  font-size: 30px;
+  color: #fff;
 }
 
 
