--- a/src/app/header/header-search/header-search.component.scss
+++ b/src/app/header/header-search/header-search.component.scss
@@ -33,7 +33,7 @@ input[type=text]:focus {
   box-sizing: border-box;
   font-size: 16px;
   background-color: white;
-  background-image: url('./../../../../assets/searchicon.png');
+  background-image: url('../../../assets/searchicon.png');
   background-position: 10px 20px;
   background-repeat: no-repeat;
   padding: 20px 20px 20px 40px;
