test lazyloading routermodule holy shit, ngPrime...!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header (offCanvasClicked)="OffCanvasClicked()"></app-header>
-<app-off-canvas (closeNavState)="CloseNavState()" [changeCanvasState]="OffCanvasClickedCheck"></app-off-canvas>
+<!--<app-header (offCanvasClicked)="OffCanvasClicked()"></app-header>-->
+<!--<app-off-canvas (closeNavState)="CloseNavState()" [changeCanvasState]="OffCanvasClickedCheck"></app-off-canvas>-->
 <div class="main" id="main">
   <router-outlet></router-outlet>
 </div>
