--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -117,27 +117,27 @@
 
         </ul>
 
-        <ul class="list-unstyled list-inline text-center mt-2 float-left">
-        <a href="https://instagram.com" target="_blank" tabindex="-1" class="sitemap-link">
-          <fa name="instagram mr-2" size="2x"></fa>
-        </a>
-        <a href="https://twitter.com" target="_blank" tabindex="-1" class="sitemap-link">
-          <fa name="twitter mr-2" size="2x"></fa>
-        </a>
-        <a href="https://plus.google.com" target="_blank" tabindex="-1" class="sitemap-link">
-          <fa name="google mr-2" size="2x"></fa>
-        </a>
-        <a href="https://facebook.com" target="_blank" tabindex="-1" class="sitemap-link">
-          <fa name="facebook mr-2" size="2x"></fa>
-        </a>
-        </ul>
+        <!--<ul class="list-unstyled list-inline text-center mt-2 float-left">-->
+        <!--<a href="https://instagram.com" target="_blank" tabindex="-1" class="sitemap-link">-->
+          <!--<fa name="instagram mr-2" size="2x"></fa>-->
+        <!--</a>-->
+        <!--<a href="https://twitter.com" target="_blank" tabindex="-1" class="sitemap-link">-->
+          <!--<fa name="twitter mr-2" size="2x"></fa>-->
+        <!--</a>-->
+        <!--<a href="https://plus.google.com" target="_blank" tabindex="-1" class="sitemap-link">-->
+          <!--<fa name="google mr-2" size="2x"></fa>-->
+        <!--</a>-->
+        <!--<a href="https://facebook.com" target="_blank" tabindex="-1" class="sitemap-link">-->
+          <!--<fa name="facebook mr-2" size="2x"></fa>-->
+        <!--</a>-->
+        <!--</ul>-->
 
       </div>
 
       <!-- Copyright -->
-      <div class="footer-copyright text-center py-3"><span>© All rights reserved. Made with  <fa name="heart" ></fa> by Martin Polak & Bruno Staub</span>
-        <a href="#"> mabrweb.com</a>
-      </div>
+      <!--<div class="footer-copyright text-center py-3"><span>© All rights reserved. Made with  <fa name="heart" ></fa> by Martin Polak & Bruno Staub</span>-->
+        <!--<a href="#"> mabrweb.com</a>-->
+      <!--</div>-->
       <!-- Copyright -->
 
     </div>
