--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -18,6 +18,12 @@ li.nav-item.lang {
   display: flex;
 }
 
+.fa{
+  font-size: 30px;
+  color: #fff;
+}
+
+
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 
@@ -25,9 +31,10 @@ li.nav-item.lang {
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  .burgerMenu {
+  .burgerMenu, .visible-mobile {
     display: none;
   }
+
 }
 
 // Large devices (desktops, 992px and up)
