--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -18,7 +18,7 @@
                   </a>
                 </div>
                 <div class="col-6 col-sm-12 col-md-6">
-                  <a routerLink="/produkte/detail/{{item.key}}">
+                  <a routerLink="/produkte/detail/{{item.key}}/{{item.productCategory | urlPrettifier}}/{{item.name | urlPrettifier}}">
                     <p>{{item.name}}</p>
                   </a>
                   <p *ngIf="item.discountFactor !== 1" style="text-decoration:line-through;">CHF {{item.price}}</p>
@@ -43,7 +43,7 @@
                   </a>
                 </div>
                 <div class="col-6 col-sm-12 col-md-6">
-                  <a routerLink="/produkte/detail/{{item.key}}">
+                  <a routerLink="/produkte/detail/{{item.key}}/{{item.productCategory | urlPrettifier}}/{{item.name | urlPrettifier}}">
                     <p>{{item.name}}</p>
                   </a>
                   <p *ngIf="item.discountFactor !== 1" style="text-decoration:line-through;">CHF {{item.price}}</p>
@@ -69,7 +69,7 @@
                     </a>
                   </div>
                   <div class="col-6 col-sm-12 col-md-6">
-                    <a routerLink="/produkte/detail/{{item.key}}">
+                    <a routerLink="/produkte/detail/{{item.key}}/{{item.productCategory | urlPrettifier}}/{{item.name | urlPrettifier}}">
                       <p>{{item.name}}</p>
                     </a>
                     <p *ngIf="item.discountFactor !== 1" style="text-decoration:line-through;">CHF {{item.price}}</p>
