--- a/src/app/shared/page-title/page-title.component.html
+++ b/src/app/shared/page-title/page-title.component.html
@@ -8,7 +8,7 @@
         <ul class="suggest">
           <ng-container *ngFor="let suggest of filteredProducts">
             <li>
-              <a *ngIf="suggest.name" (click)="closeSuggest()" routerLink="/produkte/detail/{{suggest.key}}">{{ suggest.name }}</a>
+              <a *ngIf="suggest.name" (click)="closeSuggest()" routerLink="/produkte/detail/{{suggest.key}}/{{suggest.productCategory | urlPrettifier}}/{{suggest.name | urlPrettifier}}">{{ suggest.name }}</a>
             </li>
           </ng-container>
         </ul>
@@ -46,7 +46,7 @@
         <ul class="suggest">
           <ng-container *ngFor="let suggest of filteredProducts">
             <li>
-              <a *ngIf="suggest.name" (click)="closeSuggest()" routerLink="/produkte/detail/{{suggest.key}}">{{ suggest.name }}</a>
+              <a *ngIf="suggest.name" (click)="closeSuggest()" routerLink="/produkte/detail/{{suggest.key}}/{{suggest.productCategory | urlPrettifier}}/{{suggest.name | urlPrettifier}}">{{ suggest.name }}</a>
             </li>
           </ng-container>
         </ul>
