--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -5,7 +5,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="row">
             <div class="col-sm-12 col-md-12 m-md-b">
-              <div class="feature-box-thumb"><img alt="product image"
+              <div class="feature-box-thumb"><img alt="{{product.name}}"
                                                   class="img-fluid card-shadow"
                                                   src="{{product.image || '//:0'}}"></div>
             </div>
